2021-03-30  Frank Ch. Eigler <fche@redhat.com>

	* debuginfod.cxx (main): Set child thread names.

2021-03-07  Timm Bäder <tbaeder@redhat.com>

	* debuginfod-client.c (debuginfod_query_server): Tweak
	double/long clamping arithmetic to avoid UB and warnings.

2021-02-25  Frank Ch. Eigler <fche@redhat.com>

	* debuginfod.cxx (handler_cb): Filter webapi for bad
	artifacttype keywords early for metric hygiene.

2021-02-14  Frank Ch. Eigler <fche@redhat.com>

	* debuginfod.cxx (main -U): Use bsdtar unconditionally.  Also map
	the debian-compatible .ipk (openembedded distro family) to same.

2021-02-04  Frank Ch. Eigler <fche@redhat.com>

	PR27092 low-memory handling
	* debuginfod.cxx (fdcache_mintmp): New parameter, with cmd-line option.
	(parse_opt): Parse it.
	(main): Default it.
	(statfs_free_enough_p): New function.
	(libarchive_fdcache::*): Call it to trigger emergency fdcache flush.
	(thread_main_scanner): Call it to report filesystem fullness metrics.
	(groom): Ditto.
	(set/add_metric): Take double rather than int64_t values.
	(archive_exception): Propagate suberror to metric label.
	(main): Detect pthread creation fatal errors properly.

2021-02-02  Frank Ch. Eigler <fche@redhat.com>

	PR27323
	* debuginfod.cxx (dbq): New read-only database connection for queries
	only.
	(signal_handler): Interrupt it.
	(main): Open / close it.
	(handle_buildid): Use it for webapi queries only.
	(database_stats_report): Make more interruptible.  Report sqlite3
	operation times to the prometheus metrics.
	(groom): Make more interruptible.
	(thread_main_fts_source_paths, thread_main_groom): Ensure
	state/progress metrics are fresh even in case of exceptions.

2020-12-20  Dmitry V. Levin  <ldv@altlinux.org>

	* .gitignore: New file.

2020-12-12  Dmitry V. Levin  <ldv@altlinux.org>

	* debuginfod-client.c (debuginfod_query_server): Fix spelling typos in
	comments.
	* debuginfod.cxx: Likewise.
	(parse_opt): Fix spelling typos in error diagnostics.
