@@ -1,3 +1,8 @@
+2021-04-15  Frank Ch. Eigler <fche@redhat.com>
+
+	* debuginfod.cxx (elf_classify): Recognize symtab-only stripped files
+	like fedora's libicudata as debuginfo files.
+
 2021-03-30  Frank Ch. Eigler <fche@redhat.com>
 
 	* debuginfod.cxx (main): Set child thread names.
